pipeline_outputs/pipeline_20250906_093904/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devethops-pipeline
    pipeline: pipeline_20250906_093904
  name: devethops-pipeline-service
  namespace: devethops
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: devethops-pipeline
  type: ClusterIP
